// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epochs Can return aggregated Epoch data 1`] = `
Object {
  "epochs_aggregate": Object {
    "aggregate": Object {
      "count": "185",
      "max": Object {
        "number": 184,
        "output": "424616166073756860",
        "transactionsCount": "40972",
      },
      "min": Object {
        "output": "2654692166740613",
        "transactionsCount": "33",
      },
      "sum": Object {
        "output": "8293029495565297000",
        "transactionsCount": "1938088",
      },
    },
  },
}
`;

exports[`epochs Can return aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "activeStake_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": null,
          },
        },
      },
      "blocksCount": "21590",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 47846.34914312181,
            "size": 868.0383047707272,
          },
          "count": "21590",
          "max": Object {
            "fees": "1377042",
            "size": "648087",
          },
          "min": Object {
            "fees": "0",
            "size": "631",
          },
          "sum": Object {
            "fees": "1033002678",
            "size": "18740947",
          },
        },
      },
      "fees": 1033002678,
      "number": 1,
    },
    Object {
      "activeStake_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": "15657991508072960",
          },
        },
      },
      "blocksCount": "21627",
      "blocks_aggregate": Object {
        "aggregate": Object {
          "avg": Object {
            "fees": 237477.9113145605,
            "size": 491.35959680029595,
          },
          "count": "21627",
          "max": Object {
            "fees": "498861647",
            "size": "19292",
          },
          "min": Object {
            "fees": "0",
            "size": "3",
          },
          "sum": Object {
            "fees": "5135934788",
            "size": "10626634",
          },
        },
      },
      "fees": 5135934788,
      "number": 220,
    },
  ],
}
`;

exports[`epochs Can return filtered aggregated data 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocks_aggregate": Object {
        "aggregate": Object {
          "count": "3123",
        },
      },
      "fees": 1033002678,
      "number": 1,
    },
  ],
}
`;

exports[`epochs Returns epoch details by number 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocksCount": "21590",
      "fees": 1033002678,
      "lastBlockTime": "2017-10-03T21:44:31Z",
      "number": 1,
      "output": "101402912214214220",
      "startedAt": "2017-09-28T21:44:51Z",
      "transactionsCount": "12870",
    },
  ],
}
`;

exports[`epochs Returns epoch details by number range 1`] = `
Object {
  "epochs": Array [
    Object {
      "blocksCount": "21590",
      "fees": 1033002678,
      "lastBlockTime": "2017-10-03T21:44:31Z",
      "number": 1,
      "output": "101402912214214220",
      "startedAt": "2017-09-28T21:44:51Z",
      "transactionsCount": "12870",
    },
  ],
}
`;
